# outline

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  dist-workspace.toml
.github/scripts/: check-ort-feature-sync.py  prepare-ort-runtime.sh  run-ort-runtime-custom-env.sh  run-ort-runtime-dynamic.sh  run-ort-runtime-pkg-config.sh
.github/workflows/: release.yml  rust.yml
src/: cli.rs  config.rs  error.rs  foreground.rs  geometry.rs  inference.rs  layer.rs  lib.rs  main.rs  mask.rs  matte.rs  model_fetch.rs  report.rs  runtime.rs  tracing.rs
src/commands/: compose.rs  cut.rs  fetch_model.rs  mask.rs  mod.rs  trace.rs  utils.rs
src/vectorizer/: mod.rs  vtracer.rs
tests/: in_memory_inputs.rs  runtime_dynamic.rs  runtime_dynamic_env.rs
tests/support/: mod.rs  runtime_dynamic.rs  tiny_onnx.rs
