[package]
name = "outline-core"
version = "0.1.0"
edition = "2024"
repository = "https://github.com/wyh2001/outline"
license = "MIT"
description = "Image background removal with flexible mask processing options"

[features]
default = ["cli"]
cli = ["clap", "vectorizer-vtracer"]
vectorizer-vtracer = ["dep:vtracer", "dep:visioncortex"]
fetch-model = ["dep:ureq", "dep:indicatif", "dep:sha2", "dep:dirs"]

[lib]
name = "outline"
path = "src/lib.rs"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
image = "0.25.9"
ort = "2.0.0-rc.10"
vtracer = { version = "0.6.5", optional = true }
ndarray = "0.16.1"
visioncortex = { version = "0.8.9", optional = true }
imageproc = "0.25.0"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"], optional = true }
ureq = { version = "3", optional = true }
indicatif = { version = "0.18", optional = true }
sha2 = { version = "0.10", optional = true }
dirs = { version = "6", optional = true }

[[bin]]
name = "outline"
path = "src/main.rs"
required-features = ["cli"]

[dev-dependencies]
proptest = "1.9.0"
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
