[package]
name = "outline-core"
version = "0.1.1"
edition = "2024"
repository = "https://github.com/wyh2001/outline"
license = "MIT"
description = "Image background removal with flexible mask processing options"
exclude = ["tests/fixtures/identity.ort"]

[features]
default = ["ort-download-binaries"]
cli = ["clap", "vectorizer-vtracer", "ort-copy-dylibs"]
vectorizer-vtracer = ["dep:vtracer", "dep:visioncortex"]
fetch-model = ["dep:ureq", "dep:indicatif", "dep:sha2", "dep:dirs"]
ort-download-binaries = ["ort/download-binaries", "ort/tls-native"]
ort-load-dynamic = ["ort/load-dynamic"]
ort-pkg-config = ["ort/pkg-config"]
ort-copy-dylibs = ["ort/copy-dylibs"]

[lib]
name = "outline"
path = "src/lib.rs"

[package.metadata.docs.rs]
no-default-features = true
features = ["cli", "fetch-model", "ort-load-dynamic"]
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
image = "0.25.9"
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "tracing"] }
vtracer = { version = "0.6.5", optional = true }
ndarray = "0.17"
visioncortex = { version = "0.8.10", optional = true }
imageproc = "0.25.0"
thiserror = "2"
clap = { version = "4", features = ["derive", "env"], optional = true }
ureq = { version = "3", optional = true }
indicatif = { version = "0.18", optional = true }
sha2 = { version = "0.10", optional = true }
dirs = { version = "6", optional = true }

[[bin]]
name = "outline"
path = "src/main.rs"
required-features = ["cli"]

[dev-dependencies]
proptest = "1.10.0"
tempfile = "3"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
